--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.4</version>
                 <configuration>
+                    <finalName>${project.name}</finalName>
                     <relocations>
                         <relocation>
                             <pattern>com.zaxxer.hikari</pattern>
